<resources>
    <string name="app_name">RedHood</string>
    <!-- Appbar titles. -->
    <string name="reg_appbar_title">Registration</string>
    <string name="reset_appbar_title">Password Recovery</string>
    <string name="login_appbar_title">Log In</string>
    <string name="verification_appbar_title">Email Verification</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="create_hood_title">Create Hood</string>
    <string name="hoods_title">Hoods</string>
    <string name="saved_hoods_title">Saved Hoods</string>
    <string name="subscription_hood_title">Subscriptions</string>
    <string name="user_hood_title">Your Hoods</string>
    <!-- Validation errors. -->
    <string name="empty_form">form is empty</string>
    <string name="invalid_email">email is invalid</string>
    <string name="busy_email">email is already in use</string>
    <string name="weak_password">at least 6 chars</string>
    <string name="pswrd_not_match">passwords don\'t match</string>
    <!-- Errors. -->
    <string name="got_wrong">something got wrong</string>
    <string name="login_wrong_data">wrong email or password</string>
    <string name="email_not_verified">please verify your email</string>
    <!-- Text Views. -->
    <string name="email_tv">Email:</string>
    <string name="username_tv">Username:</string>
    <string name="password_tv">Password:</string>
    <string name="confirm_password_tv">Confirm Password:</string>
    <string name="verification_title">
        We were sent verification letter to your email account.
        Please check your email, verify it and continue.
    </string>
    <string name="edit_image_tv">Edit Profile Image:</string>
    <string name="reset_password_tv">Forgot password?</string>
    <string name="register_new_account_tv">Register new account!</string>
    <string name="reset_password_title">
        After you enter an email of your account we will send to your email
        password reset letter.
        Please check your email and create new password.
    </string>
    <string name="edit_username_tv">Edit Username:</string>
    <!-- Hints. -->
    <string name="email_hint">Enter email</string>
    <string name="username_hint">Enter username</string>
    <string name="password_hint">Enter password</string>
    <string name="confirm_password_hint">Repeat password</string>
    <string name="edit_username_hint">Enter new name</string>
    <!-- Buttons. -->
    <string name="submit_button">submit</string>
    <string name="con_button">continue</string>
    <string name="ok_button">OK</string>
    <string name="apply_button">apply</string>
    <!-- Logout Dialog. -->
    <string name="logout_message">Confirm your leaving!</string>
    <string name="logout_yes">Log Out</string>
    <string name="logout_no">Cancel</string>
    <!-- Edit User Dialog. -->
    <string name="edit_user_message">Apply changes?</string>
    <string name="edit_user_yes">Yes</string>
    <string name="edit_user_no">No</string>
    <string name="edit_user_toast">changes applied</string>
    <!-- Create Hood Dialog. -->
    <string name="create_hood_message">Create Hood?</string>
    <string name="create_hood_yes">Create</string>
    <string name="create_hood_no">Cancel</string>
    <string name="create_hood_toast">hood was created</string>
    <!-- Edit Hood Dialog. -->
    <string name="edit_hood_message">Edit Hood?</string>
    <string name="edit_hood_yes">Edit</string>
    <string name="edit_hood_no">Cancel</string>
    <string name="edit_hood_toast">hood was edited</string>
    <!-- Bottom menu. -->
    <string name="hoods_menu">Hoods</string>
    <string name="subscriptions_hoods_menu">Subscriptions</string>
    <string name="user_hoods_menu">Your Hoods</string>
    <!-- Drawer menu. -->
    <string name="edit_profile_menu">Edit Profile</string>
    <string name="create_hoods_menu">Create Hood</string>
    <string name="liked_hoods_menu">Liked Hoods</string>
    <string name="logout_menu">Log Out</string>
    <!-- Chooser strings. -->
    <string name="chooser_title">Choose App.</string>
    <string name="title_activity_drawer_base">DrawerBase</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>