<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/editProfile"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/edit_profile_menu" />
        <item
            android:id="@+id/createHoodsFragment"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/create_hoods_menu" />
        <item
            android:id="@+id/userHoodsFragment"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/user_hoods_menu" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/logout_menu" />
    </group>
</menu>